objects/CSHealthMetric__c/CSHealthMetric__c.object-meta.xml
<CustomObject>
    <description>SS-11217: Deprecated</description>
    <label>DEPRECATED - CSHealthMetric</label>
    <nameField>
        <displayFormat>CSHM-{0000000}</displayFormat>
        <label>DEPRECATED - CSHealthMetric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSHealthMetrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>