objects/CSHealthMetric__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>SS-11217: Deprecated.</description>
    <label>DEPRECATED - Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Satisfactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>