objects/CSHealthMetric__c/fields/Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric_Date__c</fullName>
    <description>SS-11217: Deprecated.
Effective date of the metric item.</description>
    <inlineHelpText>Effective date of the metric item.</inlineHelpText>
    <label>DEPRECATED - Metric Date</label>
    <type>Date</type>
</CustomField>