objects/CSHealthMetric__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>SS-11217: Deprecated.</description>
    <label>DEPRECATED - Score</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>